--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 				"redhat.fabric8-analytics",
 				"sohibe.java-generate-setters-getters",
 				"streetsidesoftware.code-spell-checker",
-				"vscjava.vscode-spring-initializr"
+				"vscjava.vscode-spring-initializr",
+				"redhat.vscode-xml"
             ]
         }
     }
