Thymeleaf as a rendering engine

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 				"sohibe.java-generate-setters-getters",
 				"streetsidesoftware.code-spell-checker",
 				"vscjava.vscode-spring-initializr",
-				"redhat.vscode-xml"
+				"redhat.vscode-xml",
+				"juhahinkula.thymeleaf"
             ]
         }
     }
