--- a/landon-hotel/pom.xml
+++ b/landon-hotel/pom.xml
@@ -31,7 +31,7 @@
       		<groupId>com.h2database</groupId>
       		<artifactId>h2</artifactId>
     	</dependency>
-		
+
     	<dependency>
       		<groupId>org.projectlombok</groupId>
       		<artifactId>lombok</artifactId>
@@ -40,6 +40,11 @@
 		<dependency>
     		<groupId>org.postgresql</groupId>
     		<artifactId>postgresql</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
