--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "editor.defaultFormatter": "redhat.java",
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "[xml]": {
+        "editor.defaultFormatter": "redhat.vscode-xml"
     }
 }
